--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="navbar">
         <a href="contact.html" class="button">💼 Contact Me</a>
         <a href="chat.html" class="button">💬 Live Chat</a>
-        <a href="tetris.html" class="button">🎮 Tetris</a>
+        <a href="flappycharlie.html" class="button">🎮 Flappy Charlie</a>
         <a href="pixelart.html" class="button">🎨 Pixel Art</a>
         <button class="button" style="background:linear-gradient(to bottom, #800080, #4b0082); color:white; border-color:#ff00ff;" onclick="shareWebsite()">📤 Share</button>
         <button class="button" style="background:linear-gradient(to bottom, #ff1493, #ff69b4); color:white; border-color:#ff00ff;" onclick="partyMode()">🎉 Party</button>
