--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/png" href="charlie.png">
+<link rel="apple-touch-icon" href="charlie.png">
 <title>🚨 CHARLIE'S HOMEPAGE 🚨</title>
 <link rel="stylesheet" href="elements.css">
 <style>
